--- a/index.html
+++ b/index.html
@@ -21,8 +21,98 @@
     <title>Welcome To Tutor</title>
   </head>
   <body>
+    <nav class="navbar">
+      <div class="navbar-flex container">
+        <img src="./images/logo.svg" alt="Tutor" />
+        <div class="main-menu-items">
+          <ul class="main-menu-list">
+            <li>
+              <a href="#">Home</a>
+            </li>
+            <li>
+              <a href="#chapters">Chapters</a>
+            </li>
+            <li>
+              <a href="#summary">Summary</a>
+            </li>
+            <li>
+              <a href="#takeaways">Takeaways</a>
+            </li>
+            <li>
+              <a href="#author">Author</a>
+            </li>
+            <li>
+              <a href="#contact.html">Contact</a>
+            </li>
+            <li>
+              <a href="facebook.com" target="_blank">
+                <i class="fa-brands fa-facebook"></i>
+              </a>
+            </li>
+            <li>
+              <a href="x.com" target="_blank">
+                <i class="fa-brands fa-twitter"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
 
-
+        <!-- Mobile Menu -->
+        <div class="mobile-menu">
+          <!-- Hamburger Button -->
+          <div class="mobile-menu-toggle">
+            <i class="fas fa-bars fa-2x"></i>
+          </div>
+          <!-- Mobile Menu Items -->
+          <div class="mobile-menu-items">
+            <ul class="mobile-menu-list">
+              <li>
+                <a href="#">Home</a>
+              </li>
+              <li>
+                <a href="#chapters">Chapters</a>
+              </li>
+              <li>
+                <a href="#summary">Summary</a>
+              </li>
+              <li>
+                <a href="#takeaways">Takeaways</a>
+              </li>
+              <li>
+                <a href="#author">Author</a>
+              </li>
+              <li>
+                <a href="#contact.html">Contact</a>
+              </li>
+              <li>
+                <a href="facebook.com" target="_blank">
+                  <i class="fa-brands fa-facebook"></i>
+                </a>
+              </li>
+              <li>
+                <a href="x.com" target="_blank">
+                  <i class="fa-brands fa-twitter"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </nav>
+    <!-- Hero -->
+    <header class="hero">
+      <div class="container hero-flex">
+        <div class="hero-content">
+          <h1>Create your own courses</h1>
+          <p>
+            Dive deep into the world of creativity and learn to craft stunning
+            videos that captivate your audience.
+          </p>
+          <a href="#" class="btn"> $29 Get Course</a>
+        </div>
+        <img src="images/header-course.png" alt="hero" />
+      </div>
+    </header>
     <script src="js/script.js"></script>
   </body>
 </html>
