--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               <a href="#author">Author</a>
             </li>
             <li>
-              <a href="#contact.html">Contact</a>
+              <a href="contact.html">Contact</a>
             </li>
             <li>
               <a href="facebook.com" target="_blank">
@@ -421,11 +421,13 @@
           <ul>
             <li>
               <i class="fas fa-chevron-circle-right text-primary"></i>
-              <strong>Expertise</strong>: Lorem ipsum dolor sit amet consectetur.
+              <strong>Expertise</strong>: Lorem ipsum dolor sit amet
+              consectetur.
             </li>
             <li>
               <i class="fas fa-chevron-circle-right text-primary"></i>
-              <strong>Experience</strong>: Lorem ipsum dolor sit amet consectetur.
+              <strong>Experience</strong>: Lorem ipsum dolor sit amet
+              consectetur.
             </li>
             <li>
               <i class="fas fa-chevron-circle-right text-primary"></i>
@@ -436,7 +438,87 @@
         </div>
       </div>
     </section>
-    
+    <!-- Stats -->
+    <section class="stats section" id="stats">
+      <div class="container stats-flex">
+        <img src="./images/stats.png" alt="stats" />
+        <div class="stats-content">
+          <div class="stats-numbers">
+            <div>
+              <h3>2000+</h3>
+              <p>Happy Users</p>
+            </div>
+            <div>
+              <h3>358</h3>
+              <p>Issues Solved</p>
+            </div>
+            <div>
+              <h3>980</h3>
+              <p>Good Reviews</p>
+            </div>
+            <div>
+              <h3>216</h3>
+              <p>Case Studies</p>
+            </div>
+          </div>
+          <p class="stats-text">
+            Tutor is probably one of the best video courses on landing page
+            making in the web industry
+          </p>
+          <a href="#" class="btn">Get The Course</a>
+        </div>
+      </div>
+    </section>
+
+    <!-- Newsletter -->
+    <section class="newsletter section" id="newsletter">
+      <div class="container newsletter-flex">
+        <h2>Subscribe to our newsletter</h2>
+        <p>
+          Stay updated with the latest news, offers, and insights from our
+          platform. I Join our newsletter community
+        </p>
+        <form>
+          <input
+            type="email"
+            name="email"
+            id="email"
+            placeholder="Enter your email"
+          />
+          <button type="submit" class="btn">Subscribe</button>
+        </form>
+      </div>
+    </section>
+    <!-- Social -->
+    <section class="social section">
+      <div class="container">
+        <p>Follow us on social media for updates and news about our courses!</p>
+        <div class="social-icons">
+          <a href="facebook.com"><i class="fa-brands fa-facebook fa-2x"></i></a>
+          <a href="twitter.com"><i class="fa-brands fa-twitter fa-2x"></i></a>
+          <a href="instagram.com"
+            ><i class="fa-brands fa-instagram fa-2x"></i
+          ></a>
+          <a href="linkedin.com"><i class="fa-brands fa-linkedin fa-2x"></i></a>
+          <a href="youtube.com"><i class="fa-brands fa-youtube fa-2x"></i></a>
+          <a href="pintrest.com"><i class="fa-brands fa-pintrest fa-2x"></i></a>
+        </div>
+      </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="container footer-flex">
+        <ul class="footer-links">
+          <li><a href="#"></a>Home</li>
+          <li><a href="#"></a>Terms</li>
+          <li><a href="#"></a>Privacy</li>
+          <li><a href="contact.html"></a>Contact</li>
+        </ul>
+        <p>&copy; 2025 Tutor. All rights reserved</p>
+      </div>
+    </footer>
+
     <script src="js/script.js"></script>
   </body>
 </html>
