--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,154 @@
     <title>Welcome To Tutor</title>
   </head>
   <body>
-   
+    <nav class="navbar">
+      <div class="navbar-flex container">
+        <img src="./images/logo.svg" alt="Tutor" />
+        <div class="main-menu-items">
+          <ul class="main-menu-list">
+            <li>
+              <a href="index.html">Home</a>
+            </li>
+            <li>
+              <a href="index.html">Chapters</a>
+            </li>
+            <li>
+              <a href="index.html">Summary</a>
+            </li>
+            <li>
+              <a href="index.html">Takeaways</a>
+            </li>
+            <li>
+              <a href="index.html">Author</a>
+            </li>
+            <li>
+              <a href="#contact.html">Contact</a>
+            </li>
+            <li>
+              <a href="facebook.com" target="_blank">
+                <i class="fa-brands fa-facebook"></i>
+              </a>
+            </li>
+            <li>
+              <a href="x.com" target="_blank">
+                <i class="fa-brands fa-twitter"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
+
+        <!-- Mobile Menu -->
+        <div class="mobile-menu">
+          <!-- Hamburger Button -->
+          <div class="mobile-menu-toggle">
+            <i class="fas fa-bars fa-2x"></i>
+          </div>
+          <!-- Mobile Menu Items -->
+          <div class="mobile-menu-items">
+            <ul class="mobile-menu-list">
+              <li>
+                <a href="#">Home</a>
+              </li>
+              <li>
+                <a href="#chapters">Chapters</a>
+              </li>
+              <li>
+                <a href="#summary">Summary</a>
+              </li>
+              <li>
+                <a href="#takeaways">Takeaways</a>
+              </li>
+              <li>
+                <a href="#author">Author</a>
+              </li>
+              <li>
+                <a href="#contact.html">Contact</a>
+              </li>
+              <li>
+                <a href="facebook.com" target="_blank">
+                  <i class="fa-brands fa-facebook"></i>
+                </a>
+              </li>
+              <li>
+                <a href="x.com" target="_blank">
+                  <i class="fa-brands fa-twitter"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </nav>
+
+    <!-- Inner Header -->
+    <header class="inner-header"></header>
+    <div class="container-sm">
+      <h1>Contact Us</h1>
+    </div>
+
+    <!-- Contact Form-->
+    <section class="contact-form section">
+      <div class="container-sm">
+        <p>
+          We love to create dependable business are solutions for small and
+          medium sized word companies. Email our office using contact@website.
+          com or call us using +123-456-7890
+        </p>
+
+        <form action="https://formspree.io/f/xqaawpqa" method="POST">
+          <input type="text" placeholder="Name" />
+          <input type="Email" placeholder="Email" />
+          <textarea name="message" placeholder="Message"></textarea>
+          <button type="submit" class="btn">Send Message</button>
+        </form>
+      </div>
+    </section>
+
+    <!-- Location -->
+    <section class="location section">
+      <div class="container-sm">
+        <h2>Office Location</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias esse
+          est id officiis, ipsam neque ad provident quibusdam nulla tempora!
+        </p>
+        <div class="map">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1241.5303553091994!2d-0.14076024298621118!3d51.51210217963597!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487604d502268421%3A0x6a7d62889992f993!2sRegent+St%2C+Soho%2C+London+W1B+5TH%2C+UK!5e0!3m2!1sen!2sro!4v1476174541049"
+            allowfullscreen=""
+          ></iframe>
+        </div>
+      </div>
+    </section>
+    <!-- Social -->
+    <section class="social section">
+      <div class="container">
+        <p>Follow us on social media for updates and news about our courses!</p>
+        <div class="social-icons">
+          <a href="facebook.com"><i class="fa-brands fa-facebook fa-2x"></i></a>
+          <a href="twitter.com"><i class="fa-brands fa-twitter fa-2x"></i></a>
+          <a href="instagram.com"
+            ><i class="fa-brands fa-instagram fa-2x"></i
+          ></a>
+          <a href="linkedin.com"><i class="fa-brands fa-linkedin fa-2x"></i></a>
+          <a href="youtube.com"><i class="fa-brands fa-youtube fa-2x"></i></a>
+          <a href="pintrest.com"><i class="fa-brands fa-pintrest fa-2x"></i></a>
+        </div>
+      </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="container footer-flex">
+        <ul class="footer-links">
+          <li><a href="#"></a>Home</li>
+          <li><a href="#"></a>Terms</li>
+          <li><a href="#"></a>Privacy</li>
+          <li><a href="contact.html"></a>Contact</li>
+        </ul>
+        <p>&copy; 2025 Tutor. All rights reserved</p>
+      </div>
+    </footer>
 
     <script src="js/script.js"></script>
   </body>
